--- a/.github/workflows/dependent-workflow.yml
+++ b/.github/workflows/dependent-workflow.yml
@@ -11,9 +11,10 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Download Changed Files Artifact
-        uses: actions/download-artifact@v4
+      - name: Download Artifact from Previous Workflow
+        uses: dawidd6/action-download-artifact@v3
         with:
+          workflow: list-changed-files.yml
           name: changed-files
           path: .
 
